--- a/Project_SuperRes/project.tex
+++ b/Project_SuperRes/project.tex
@@ -81,10 +81,11 @@ After AlexNet won the ImageNet Large Scale Visual Recognition Challenge in 2012,
 
 % ????
 \colorbox{red}{DA RISCRIVERE}
-In section~\ref{sec:model} we describe the State-of-the-art architectures for SR. In section~\ref{sec:eval} we run some tests with the noise conditional Flow model. Finally, in section~\ref{sec:conc} se we draw the conclusions.
+In section~\ref{sec:sota}  we describe the State-of-the-art architectures for SR. In section~\ref{sec:model} we describe in detail how the flow models for SR work. In section~\ref{sec:eval} we run some tests with the aforementioned flow models. Finally, in section~\ref{sec:conc} se we draw the conclusions.
 
-\section{State-of-the-art architectures for Super Resolution}
+\section{State-of-the-art architectures for Super Resolution}\label{sec:sota}
 \colorbox{red}{ADD INTRO} \\
+\colorbox{red}{ADD SOME CITE TO SOTA OF FOLLOWING MODELS} \\
 
 \subsection{Generative Adversarial Networks}
 The Generative Adversarial Networks was introduced in \cite{gans} in 2014. Goodfellow's team proposed two networks that act as generators and discriminators. The former network aims to generate data from random noise, while the second method must decide whether the data generated is realistic or not. The two models are trained alternately, so when the generator is trained, the discriminator is kept constant and vice versa. 
@@ -292,7 +293,7 @@ images of the DIV2K dataset reported in the papers. The arrows near the metric's
 
 
 
-%\newpage
+\newpage
 \section{Experiments ?}\label{sec:eval}
 %In this section we run some experiments with the NCSR model stock and with variations. The aim is to study the behaviour of the architecture with some changes.
 \newpage
